src/objects/xtma_Individual_Email_Result__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Individual Email Results</relationshipLabel>
        <relationshipName>Individual_Email_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Individual Email Results</relationshipLabel>
        <relationshipName>Individual_Email_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Individual Email Results</relationshipLabel>
        <relationshipName>R00N30000001fVySEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Bounced__c</fullName>
        <label>Date Bounced</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Opened__c</fullName>
        <label>Date Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Sent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Unsubscribed__c</fullName>
        <label>Date Unsubscribed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <label>From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Name__c</fullName>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_Owner__c</fullName>
        <label>Lead/Contact Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Brendan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Devin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Get Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeff H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheila K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tim I</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_2__c</fullName>
        <formula>Lead__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead_Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Individual Email Results</relationshipLabel>
        <relationshipName>R00N30000001fVygEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Total_Clicks__c</fullName>
        <label>Number of Total Clicks</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Unique_Clicks__c</fullName>
        <label>Number of Unique Clicks</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Individual Email Results</relationshipLabel>
        <relationshipName>R00N30000001fVySEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_email__c</fullName>
        <formula>Lead__r.User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <label>Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Line__c</fullName>
        <label>Subject Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Individual Email Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Date_Time_Sent__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Lead__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Opened__c</columns>
        <columns>Report_Name__c</columns>
        <columns>Lead_Owner_2__c</columns>
        <columns>Lead_Contact_Owner__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Easter_Email_Results_Opps</fullName>
        <columns>NAME</columns>
        <columns>Subject_Line__c</columns>
        <columns>Contact__c</columns>
        <columns>Opened__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>Date_Time_Sent__c</columns>
        <columns>Campaign__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Date_Time_Opened__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Easter Email Results - Opps</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>September_09_Newsletter</fullName>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>From_Name__c</columns>
        <columns>Campaign__c</columns>
        <columns>Lead__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Opened__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>newsletter</value>
        </filters>
        <label>September 09 Newsletter</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>St_patricks_day</fullName>
        <columns>Date_Time_Sent__c</columns>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Lead__c</columns>
        <columns>Contact__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>Opened__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Lead_Owner_2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>St. P</value>
        </filters>
        <filters>
            <field>Opened__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>St. Patrick&apos;s Day Email 2010</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Individual Email Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>